crates/ast/tests/snapshots/ast__long_expr.snap
---
source: crates/ast/tests/ast.rs
expression: parsed.unwrap()
---
(
    [
        Base(
            AstBaseExpression {
                range: AstRange {
                    start: AstPoint { 0:0 },
                    end: AstPoint { 0:9 },
                },
                ident: Some(
                    Identifier(
                        AstIdentifier {
                            range: AstRange {
                                start: AstPoint { 0:0 },
                                end: AstPoint { 0:9 },
                            },
                            value: "IAFactory",
                        },
                    ),
                ),
                values: None,
                operator: None,
            },
        ),
        Base(
            AstBaseExpression {
                range: AstRange {
                    start: AstPoint { 0:9 },
                    end: AstPoint { 0:10 },
                },
                ident: None,
                values: None,
                operator: Dot(
                    AstRange {
                        start: AstPoint { 0:9 },
                        end: AstPoint { 0:10 },
                    },
                ),
            },
        ),
        Base(
            AstBaseExpression {
                range: AstRange {
                    start: AstPoint { 0:10 },
                    end: AstPoint { 0:21 },
                },
                ident: Some(
                    Identifier(
                        AstIdentifier {
                            range: AstRange {
                                start: AstPoint { 0:10 },
                                end: AstPoint { 0:21 },
                            },
                            value: "getInstance",
                        },
                    ),
                ),
                values: None,
                operator: None,
            },
        ),
        Base(
            AstBaseExpression {
                range: AstRange {
                    start: AstPoint { 0:21 },
                    end: AstPoint { 0:23 },
                },
                ident: None,
                values: Some(
                    AstValues {
                        range: AstRange {
                            start: AstPoint { 0:21 },
                            end: AstPoint { 0:23 },
                        },
                        values: [],
                    },
                ),
                operator: None,
            },
        ),
        Base(
            AstBaseExpression {
                range: AstRange {
                    start: AstPoint { 0:23 },
                    end: AstPoint { 0:24 },
                },
                ident: None,
                values: None,
                operator: Dot(
                    AstRange {
                        start: AstPoint { 0:23 },
                        end: AstPoint { 0:24 },
                    },
                ),
            },
        ),
        Base(
            AstBaseExpression {
                range: AstRange {
                    start: AstPoint { 0:24 },
                    end: AstPoint { 0:29 },
                },
                ident: Some(
                    Identifier(
                        AstIdentifier {
                            range: AstRange {
                                start: AstPoint { 0:24 },
                                end: AstPoint { 0:29 },
                            },
                            value: "getIA",
                        },
                    ),
                ),
                values: None,
                operator: None,
            },
        ),
        Base(
            AstBaseExpression {
                range: AstRange {
                    start: AstPoint { 0:29 },
                    end: AstPoint { 0:57 },
                },
                ident: None,
                values: Some(
                    AstValues {
                        range: AstRange {
                            start: AstPoint { 0:29 },
                            end: AstPoint { 0:57 },
                        },
                        values: [
                            [
                                Base(
                                    AstBaseExpression {
                                        range: AstRange {
                                            start: AstPoint { 0:40 },
                                            end: AstPoint { 0:49 },
                                        },
                                        ident: Some(
                                            Value(
                                                Nuget(
                                                    StringLiteral(
                                                        AstIdentifier {
                                                            range: AstRange {
                                                                start: AstPoint { 0:40 },
                                                                end: AstPoint { 0:30 },
                                                            },
                                                            value: "localhost",
                                                        },
                                                    ),
                                                ),
                                            ),
                                        ),
                                        values: None,
                                        operator: None,
                                    },
                                ),
                            ],
                            [
                                Base(
                                    AstBaseExpression {
                                        range: AstRange {
                                            start: AstPoint { 0:47 },
                                            end: AstPoint { 0:51 },
                                        },
                                        ident: Some(
                                            Value(
                                                Nuget(
                                                    Int(
                                                        AstInt {
                                                            range: AstRange {
                                                                start: AstPoint { 0:47 },
                                                                end: AstPoint { 0:51 },
                                                            },
                                                            value: "1344",
                                                        },
                                                    ),
                                                ),
                                            ),
                                        ),
                                        values: None,
                                        operator: None,
                                    },
                                ),
                            ],
                            [
                                Base(
                                    AstBaseExpression {
                                        range: AstRange {
                                            start: AstPoint { 0:49 },
                                            end: AstPoint { 0:56 },
                                        },
                                        ident: Some(
                                            Identifier(
                                                AstIdentifier {
                                                    range: AstRange {
                                                        start: AstPoint { 0:49 },
                                                        end: AstPoint { 0:56 },
                                                    },
                                                    value: "SERVICE",
                                                },
                                            ),
                                        ),
                                        values: None,
                                        operator: None,
                                    },
                                ),
                            ],
                        ],
                    },
                ),
                operator: None,
            },
        ),
        Base(
            AstBaseExpression {
                range: AstRange {
                    start: AstPoint { 0:57 },
                    end: AstPoint { 0:58 },
                },
                ident: None,
                values: None,
                operator: Dot(
                    AstRange {
                        start: AstPoint { 0:57 },
                        end: AstPoint { 0:58 },
                    },
                ),
            },
        ),
        Base(
            AstBaseExpression {
                range: AstRange {
                    start: AstPoint { 0:58 },
                    end: AstPoint { 0:65 },
                },
                ident: Some(
                    Identifier(
                        AstIdentifier {
                            range: AstRange {
                                start: AstPoint { 0:58 },
                                end: AstPoint { 0:65 },
                            },
                            value: "support",
                        },
                    ),
                ),
                values: None,
                operator: None,
            },
        ),
        Base(
            AstBaseExpression {
                range: AstRange {
                    start: AstPoint { 0:65 },
                    end: AstPoint { 0:71 },
                },
                ident: None,
                values: Some(
                    AstValues {
                        range: AstRange {
                            start: AstPoint { 0:65 },
                            end: AstPoint { 0:71 },
                        },
                        values: [
                            [
                                Base(
                                    AstBaseExpression {
                                        range: AstRange {
                                            start: AstPoint { 0:66 },
                                            end: AstPoint { 0:70 },
                                        },
                                        ident: Some(
                                            Value(
                                                Nuget(
                                                    BooleanLiteral(
                                                        AstBoolean {
                                                            range: AstRange {
                                                                start: AstPoint { 0:66 },
                                                                end: AstPoint { 0:70 },
                                                            },
                                                            value: true,
                                                        },
                                                    ),
                                                ),
                                            ),
                                        ),
                                        values: None,
                                        operator: None,
                                    },
                                ),
                            ],
                        ],
                    },
                ),
                operator: None,
            },
        ),
    ],
    19,
)
