crates/ast/tests/snapshots/ast__method_no_body.snap
---
source: crates/ast/tests/ast.rs
expression: parsed
---
(
    AstClassMethod {
        range: AstRange {
            start: AstPoint { 0:0 },
            end: AstPoint { 0:40 },
        },
        header: AstMethodHeader {
            range: AstRange {
                start: AstPoint { 0:0 },
                end: AstPoint { 0:39 },
            },
            availability: AstAvailability(
                Protected | Abstract,
            ),
            name: AstIdentifier {
                range: AstRange {
                    start: AstPoint { 0:21 },
                    end: AstPoint { 0:27 },
                },
                value: "create",
            },
            jtype: AstJType {
                annotated: [],
                range: AstRange {
                    start: AstPoint { 0:19 },
                    end: AstPoint { 0:20 },
                },
                value: Class(
                    AstIdentifier {
                        range: AstRange {
                            start: AstPoint { 0:19 },
                            end: AstPoint { 0:20 },
                        },
                        value: "T",
                    },
                ),
            },
            parameters: AstMethodParameters {
                range: AstRange {
                    start: AstPoint { 0:27 },
                    end: AstPoint { 0:39 },
                },
                parameters: [
                    AstMethodParameter {
                        range: AstRange {
                            start: AstPoint { 0:28 },
                            end: AstPoint { 0:38 },
                        },
                        annotated: [],
                        jtype: AstJType {
                            annotated: [],
                            range: AstRange {
                                start: AstPoint { 0:28 },
                                end: AstPoint { 0:34 },
                            },
                            value: Class(
                                AstIdentifier {
                                    range: AstRange {
                                        start: AstPoint { 0:28 },
                                        end: AstPoint { 0:34 },
                                    },
                                    value: "Object",
                                },
                            ),
                        },
                        name: AstIdentifier {
                            range: AstRange {
                                start: AstPoint { 0:35 },
                                end: AstPoint { 0:38 },
                            },
                            value: "key",
                        },
                        fin: false,
                        variatic: false,
                    },
                ],
            },
            throws: None,
            type_parameters: None,
            annotated: [],
        },
        block: None,
    },
    9,
)
