crates/ast/tests/snapshots/ast__multi_line_string.snap
---
source: crates/ast/tests/ast.rs
expression: parsed.unwrap()
---
(
    StringLiteral(
        AstIdentifier {
            range: AstRange {
                start: AstPoint { 1:72 },
                end: AstPoint { 1:136 },
            },
            value: "\n        Here is a muilti\n        line\n        string\"\"\n        ",
        },
    ),
    1,
)
