crates/ast/tests/snapshots/ast__multiline_string_arg.snap
---
source: crates/ast/tests/ast.rs
expression: parsed
---
(
    AstBlock {
        range: AstRange {
            start: AstPoint { 0:0 },
            end: AstPoint { 2:43 },
        },
        entries: [
            Expression(
                AstBlockExpression {
                    range: AstRange {
                        start: AstPoint { 1:24 },
                        end: AstPoint { 1:512 },
                    },
                    value: [
                        Base(
                            AstBaseExpression {
                                range: AstRange {
                                    start: AstPoint { 1:24 },
                                    end: AstPoint { 1:30 },
                                },
                                ident: Some(
                                    Identifier(
                                        AstIdentifier {
                                            range: AstRange {
                                                start: AstPoint { 1:24 },
                                                end: AstPoint { 1:30 },
                                            },
                                            value: "System",
                                        },
                                    ),
                                ),
                                values: None,
                                operator: None,
                            },
                        ),
                        Base(
                            AstBaseExpression {
                                range: AstRange {
                                    start: AstPoint { 1:30 },
                                    end: AstPoint { 1:31 },
                                },
                                ident: None,
                                values: None,
                                operator: Dot(
                                    AstRange {
                                        start: AstPoint { 1:30 },
                                        end: AstPoint { 1:31 },
                                    },
                                ),
                            },
                        ),
                        Base(
                            AstBaseExpression {
                                range: AstRange {
                                    start: AstPoint { 1:31 },
                                    end: AstPoint { 1:34 },
                                },
                                ident: Some(
                                    Identifier(
                                        AstIdentifier {
                                            range: AstRange {
                                                start: AstPoint { 1:31 },
                                                end: AstPoint { 1:34 },
                                            },
                                            value: "err",
                                        },
                                    ),
                                ),
                                values: None,
                                operator: None,
                            },
                        ),
                        Base(
                            AstBaseExpression {
                                range: AstRange {
                                    start: AstPoint { 1:34 },
                                    end: AstPoint { 1:35 },
                                },
                                ident: None,
                                values: None,
                                operator: Dot(
                                    AstRange {
                                        start: AstPoint { 1:34 },
                                        end: AstPoint { 1:35 },
                                    },
                                ),
                            },
                        ),
                        Base(
                            AstBaseExpression {
                                range: AstRange {
                                    start: AstPoint { 1:35 },
                                    end: AstPoint { 1:42 },
                                },
                                ident: Some(
                                    Identifier(
                                        AstIdentifier {
                                            range: AstRange {
                                                start: AstPoint { 1:35 },
                                                end: AstPoint { 1:42 },
                                            },
                                            value: "println",
                                        },
                                    ),
                                ),
                                values: None,
                                operator: None,
                            },
                        ),
                        Base(
                            AstBaseExpression {
                                range: AstRange {
                                    start: AstPoint { 1:42 },
                                    end: AstPoint { 1:511 },
                                },
                                ident: None,
                                values: Some(
                                    AstValues {
                                        range: AstRange {
                                            start: AstPoint { 1:42 },
                                            end: AstPoint { 1:511 },
                                        },
                                        values: [
                                            [
                                                Base(
                                                    AstBaseExpression {
                                                        range: AstRange {
                                                            start: AstPoint { 1:509 },
                                                            end: AstPoint { 1:973 },
                                                        },
                                                        ident: Some(
                                                            Value(
                                                                Nuget(
                                                                    StringLiteral(
                                                                        AstIdentifier {
                                                                            range: AstRange {
                                                                                start: AstPoint { 1:509 },
                                                                                end: AstPoint { 1:43 },
                                                                            },
                                                                            value: "\n                                          The VFORK launch mechanism has been deprecated for being dangerous.\n                                          It will be removed in a future java version. Either remove the\n                                          jdk.lang.Process.launchMechanism property (preferred) or use FORK mode\n                                          instead (-Djdk.lang.Process.launchMechanism=FORK).\n                                          ",
                                                                        },
                                                                    ),
                                                                ),
                                                            ),
                                                        ),
                                                        values: None,
                                                        operator: None,
                                                    },
                                                ),
                                            ],
                                        ],
                                    },
                                ),
                                operator: None,
                            },
                        ),
                    ],
                },
            ),
        ],
    },
    11,
)
