crates/ast/tests/snapshots/ast__name.snap
---
source: crates/ast/tests/ast.rs
expression: parsed.unwrap()
---
(
    AstIdentifier {
        range: AstRange {
            start: AstPoint { 0:0 },
            end: AstPoint { 0:13 },
        },
        value: "Logger3m3m3m3",
    },
    1,
)
