crates/ast/tests/snapshots/ast__name_dot.snap
---
source: crates/ast/tests/ast.rs
expression: parsed
---
(
    AstIdentifier {
        range: AstRange {
            start: AstPoint { 0:0 },
            end: AstPoint { 0:12 },
        },
        value: "Thing1.other",
    },
    3,
)
