crates/ast/tests/snapshots/ast__name_dot_logical.snap
---
source: crates/ast/tests/ast.rs
expression: parsed
---
(
    AstAnnotated {
        range: AstRange {
            start: AstPoint { 0:0 },
            end: AstPoint { 0:10 },
        },
        name: AstIdentifier {
            range: AstRange {
                start: AstPoint { 0:1 },
                end: AstPoint { 0:10 },
            },
            value: "Overwrite",
        },
        parameters: None,
    },
    2,
)
