crates/ast/tests/snapshots/ast__new_array.snap
---
source: crates/ast/tests/ast.rs
expression: parsed.unwrap()
---
(
    AstBlockReturn {
        range: AstRange {
            start: AstPoint { 1:5 },
            end: AstPoint { 8:10 },
        },
        expression: Expression(
            [
                NewClass(
                    AstNewClass {
                        range: AstRange {
                            start: AstPoint { 1:12 },
                            end: AstPoint { 8:9 },
                        },
                        jtype: AstJType {
                            annotated: [],
                            range: AstRange {
                                start: AstPoint { 1:16 },
                                end: AstPoint { 1:26 },
                            },
                            value: Array(
                                AstJType {
                                    annotated: [],
                                    range: AstRange {
                                        start: AstPoint { 1:16 },
                                        end: AstPoint { 1:24 },
                                    },
                                    value: Array(
                                        AstJType {
                                            annotated: [],
                                            range: AstRange {
                                                start: AstPoint { 1:16 },
                                                end: AstPoint { 1:22 },
                                            },
                                            value: Class(
                                                AstIdentifier {
                                                    range: AstRange {
                                                        start: AstPoint { 1:16 },
                                                        end: AstPoint { 1:22 },
                                                    },
                                                    value: "Object",
                                                },
                                            ),
                                        },
                                    ),
                                },
                            ),
                        },
                        rhs: Array(
                            AstValues {
                                range: AstRange {
                                    start: AstPoint { 1:27 },
                                    end: AstPoint { 8:9 },
                                },
                                values: [
                                    [
                                        Array(
                                            AstValues {
                                                range: AstRange {
                                                    start: AstPoint { 2:12 },
                                                    end: AstPoint { 7:13 },
                                                },
                                                values: [
                                                    [
                                                        Base(
                                                            AstBaseExpression {
                                                                range: AstRange {
                                                                    start: AstPoint { 2:29 },
                                                                    end: AstPoint { 2:43 },
                                                                },
                                                                ident: Some(
                                                                    Value(
                                                                        Nuget(
                                                                            StringLiteral(
                                                                                AstIdentifier {
                                                                                    range: AstRange {
                                                                                        start: AstPoint { 2:29 },
                                                                                        end: AstPoint { 2:13 },
                                                                                    },
                                                                                    value: "NumberPatterns",
                                                                                },
                                                                            ),
                                                                        ),
                                                                    ),
                                                                ),
                                                                values: None,
                                                                operator: None,
                                                            },
                                                        ),
                                                    ],
                                                    [
                                                        NewClass(
                                                            AstNewClass {
                                                                range: AstRange {
                                                                    start: AstPoint { 3:16 },
                                                                    end: AstPoint { 6:17 },
                                                                },
                                                                jtype: AstJType {
                                                                    annotated: [],
                                                                    range: AstRange {
                                                                        start: AstPoint { 3:20 },
                                                                        end: AstPoint { 3:28 },
                                                                    },
                                                                    value: Array(
                                                                        AstJType {
                                                                            annotated: [],
                                                                            range: AstRange {
                                                                                start: AstPoint { 3:20 },
                                                                                end: AstPoint { 3:26 },
                                                                            },
                                                                            value: Class(
                                                                                AstIdentifier {
                                                                                    range: AstRange {
                                                                                        start: AstPoint { 3:20 },
                                                                                        end: AstPoint { 3:26 },
                                                                                    },
                                                                                    value: "String",
                                                                                },
                                                                            ),
                                                                        },
                                                                    ),
                                                                },
                                                                rhs: Array(
                                                                    AstValues {
                                                                        range: AstRange {
                                                                            start: AstPoint { 3:29 },
                                                                            end: AstPoint { 6:17 },
                                                                        },
                                                                        values: [
                                                                            [
                                                                                Base(
                                                                                    AstBaseExpression {
                                                                                        range: AstRange {
                                                                                            start: AstPoint { 4:20 },
                                                                                            end: AstPoint { 4:20 },
                                                                                        },
                                                                                        ident: Some(
                                                                                            Value(
                                                                                                Nuget(
                                                                                                    StringLiteral(
                                                                                                        AstIdentifier {
                                                                                                            range: AstRange {
                                                                                                                start: AstPoint { 4:20 },
                                                                                                                end: AstPoint { 3:30 },
                                                                                                            },
                                                                                                            value: "",
                                                                                                        },
                                                                                                    ),
                                                                                                ),
                                                                                            ),
                                                                                        ),
                                                                                        values: None,
                                                                                        operator: None,
                                                                                    },
                                                                                ),
                                                                            ],
                                                                            [
                                                                                Base(
                                                                                    AstBaseExpression {
                                                                                        range: AstRange {
                                                                                            start: AstPoint { 5:20 },
                                                                                            end: AstPoint { 5:20 },
                                                                                        },
                                                                                        ident: Some(
                                                                                            Value(
                                                                                                Nuget(
                                                                                                    StringLiteral(
                                                                                                        AstIdentifier {
                                                                                                            range: AstRange {
                                                                                                                start: AstPoint { 5:20 },
                                                                                                                end: AstPoint { 4:22 },
                                                                                                            },
                                                                                                            value: "",
                                                                                                        },
                                                                                                    ),
                                                                                                ),
                                                                                            ),
                                                                                        ),
                                                                                        values: None,
                                                                                        operator: None,
                                                                                    },
                                                                                ),
                                                                            ],
                                                                        ],
                                                                    },
                                                                ),
                                                            },
                                                        ),
                                                    ],
                                                ],
                                            },
                                        ),
                                    ],
                                ],
                            },
                        ),
                    },
                ),
            ],
        ),
    },
    24,
)
